WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149384
[Mac, iOS] AccessibilityController doesn't uninstall global notification handler
https://bugs.webkit.org/show_bug.cgi?id=149384
Summary
[Mac, iOS] AccessibilityController doesn't uninstall global notification handler
Alexey Proskuryakov
Reported
2015-09-20 00:36:07 PDT
AccessibilityController::platformResetToConsistentState() clears the pointer, but the notification handle remains set. This is observable, as accessibility/mac/loaded-notification.html changes the behavior of subsequent accessibility tests.
Attachments
proposed fix
(4.96 KB, patch)
2015-09-20 00:41 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-09-20 00:41:07 PDT
Created
attachment 261605
[details]
proposed fix
WebKit Commit Bot
Comment 2
2015-09-20 08:30:27 PDT
Comment on
attachment 261605
[details]
proposed fix Clearing flags on attachment: 261605 Committed
r190026
: <
http://trac.webkit.org/changeset/190026
>
WebKit Commit Bot
Comment 3
2015-09-20 08:30:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug