[Mac, iOS] AccessibilityController doesn't uninstall global notification handler https://bugs.webkit.org/show_bug.cgi?id=149384

Reviewed by Chris Fleizach.

Tools:

* DumpRenderTree/ios/AccessibilityControllerIOS.mm:
(AccessibilityController::addNotificationListener): Fixed a leak, and cleaned up the code.
(AccessibilityController::platformResetToConsistentState): Actually remove the handler,
regardless of whether someone else holds a reference (we also call -stopListening in
-dealloc).

* DumpRenderTree/mac/AccessibilityControllerMac.mm:
(AccessibilityController::platformResetToConsistentState):
(AccessibilityController::addNotificationListener):
Ditto.

LayoutTests:

* accessibility/mac/loaded-notification.html: Cleaned up the test - js-test-pre is
incompatible with directly using waitUntilDone.


Canonical link: https://commits.webkit.org/167470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190026 268f45cc-cd09-0410-ab3c-d52691b4dbfc