Tools/DumpRenderTree/mac/AccessibilityControllerMac.mm
@@ -121,6 +121,7 @@ void AccessibilityController::setLogAccessibilityEvents(bool)
 
 void AccessibilityController::platformResetToConsistentState()
 {
+    [m_globalNotificationHandler stopObserving];
     m_globalNotificationHandler.clear();
 }
 
@@ -133,9 +134,9 @@ bool AccessibilityController::addNotificationListener(JSObjectRef functionCallba
     // Other platforms may be different.
     if (m_globalNotificationHandler)
         return false;
-    m_globalNotificationHandler = [[AccessibilityNotificationHandler alloc] init];
-    [m_globalNotificationHandler.get() setCallback:functionCallback];
-    [m_globalNotificationHandler.get() startObserving];
+    m_globalNotificationHandler = adoptNS([[AccessibilityNotificationHandler alloc] init]);
+    [m_globalNotificationHandler setCallback:functionCallback];
+    [m_globalNotificationHandler startObserving];
 
     return true;
 }
